fix visibility of pending requests #35

--- a/client/stylesheets/inspinia/pages/_shifts.scss
+++ b/client/stylesheets/inspinia/pages/_shifts.scss
@@ -408,7 +408,7 @@
 				}
 			}
 
-			&.noAdmin .shift-team.closed .shift-team-participants {
+			&.noAdmin .shift-team.closed {
 				color: #777;
 			}
 
